--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,8 @@
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.5",
     "com.unity.ugui": "1.0.0",
+    "jillejr.newtonsoft.json-for-unity": "12.0.301",
+    "jillejr.newtonsoft.json-for-unity.converters": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -46,5 +48,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "jilleJr",
+      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity",
+      "scopes": [
+        "jillejr.newtonsoft.json-for-unity"
+      ]
+    }
+  ]
 }
