--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,6 +128,9 @@
      <Compile Include="Assets\Scripts\Scriptable\ScriptableMarketState.cs" />
      <Compile Include="Assets\Scripts\MarketSystem.cs" />
      <Compile Include="Assets\Scripts\TransferItemMarketCtrl.cs" />
+     <Compile Include="Assets\Scripts\Scriptable\ScriptableShipFactory.cs" />
+     <Compile Include="Assets\Scripts\Common\CommonUtils.cs" />
+     <Compile Include="Assets\Scripts\Menu\TownScene\WorkshopMenu.cs" />
      <None Include="Assets\3rd-Party\kenney_piratepack\License.txt" />
      <None Include="Assets\3rd-Party\kenney_piratepack\Spritesheet\shipsMiscellaneous_sheet@2.xml" />
      <None Include="Assets\3rd-Party\kenney_piratepack\Spritesheet\shipsMiscellaneous_sheet.xml" />
